// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty 1`] = `
Array [
  "workspaces.sectionTitle",
  <div
    className="!bg-blue-200 flex grow m-16 !mt-0 rounded relative pt-6"
  >
    <div>
      <div
        className="flex flex-wrap align-start justify-center gap-4"
      >
        <button
          className="p-2 bg-slate-100 !m-4 w-[20rem] h-[6rem] flex flex-col justify-between overflow-hidden rounded border border-slate-300 border-dashed"
          disabled={false}
          id="createWorkspaceButton"
          onClick={[Function]}
        >
          <div
            className="flex grow flex-row text-center content-center"
          >
            <div
              className="flex mx-3 items-center justify-center"
            >
              <div
                className="ant-btn ant-btn-primary !h-12 !w-12 !p-0 !flex items-center justify-center"
              />
            </div>
            <div
              className="flex grow flex-col justify-center"
            >
              create.label
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-1 right-1 text-gray mr-1 text-[10px]"
  >
    Prisme.ai v
    6.2.0
  </div>,
]
`;

exports[`should render some workspaces 1`] = `
Array [
  "workspaces.sectionTitle",
  <div
    className="!bg-blue-200 flex grow m-16 !mt-0 rounded relative pt-6"
  >
    <div>
      <div
        className="flex flex-wrap align-start justify-center gap-4"
      >
        <button
          className="p-2 bg-slate-100 !m-4 w-[20rem] h-[6rem] flex flex-col justify-between overflow-hidden rounded border border-slate-300 border-dashed"
          disabled={false}
          id="createWorkspaceButton"
          onClick={[Function]}
        >
          <div
            className="flex grow flex-row text-center content-center"
          >
            <div
              className="flex mx-3 items-center justify-center"
            >
              <div
                className="ant-btn ant-btn-primary !h-12 !w-12 !p-0 !flex items-center justify-center"
              />
            </div>
            <div
              className="flex grow flex-col justify-center"
            >
              create.label
            </div>
          </div>
        </button>
        <button
          className="p-2 bg-white !m-4 w-[20rem] h-[6rem] content-center flex flex-col justify-between overflow-hidden rounded border border-gray-200 border-solid"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="flex grow flex-row text-center"
          >
            <div
              className="flex mx-3"
            >
              <div />
            </div>
            <div
              className="flex grow flex-col items-start"
            >
              foo
              
              <div
                className="ant-btn ant-btn-link !p-0"
              >
                edit.label
              </div>
            </div>
          </div>
        </button>
        <button
          className="p-2 bg-white !m-4 w-[20rem] h-[6rem] content-center flex flex-col justify-between overflow-hidden rounded border border-gray-200 border-solid"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="flex grow flex-row text-center"
          >
            <div
              className="flex mx-3"
            >
              <div />
            </div>
            <div
              className="flex grow flex-col items-start"
            >
              bar
              
              <div
                className="ant-btn ant-btn-link !p-0"
              >
                edit.label
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-1 right-1 text-gray mr-1 text-[10px]"
  >
    Prisme.ai v
    6.2.0
  </div>,
]
`;
